bash featue tweaks, skillhtmlrender now tied to markdown runner and integrated with intellij-doc-plugin. finally figured out how to get the docs to display non-code results. renamed tool names for mcp_mtron. rebuilt website.